# transcribble

./: .gitignore  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
crates/transcribble-cli/: Cargo.toml
crates/transcribble-cli/src/: main.rs  output.rs  wizard.rs
crates/transcribble-core/: Cargo.toml
crates/transcribble-core/src/: audio.rs  config.rs  db.rs  lib.rs  models.rs
crates/transcribble-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
crates/transcribble-tauri/capabilities/: default.json
crates/transcribble-tauri/icons/: icon.icns
crates/transcribble-tauri/src/: commands.rs  listener.rs  main.rs  permissions.rs  state.rs  tray.rs
src/: history.rs  hotkeys.rs  main.rs  models.rs  output.rs  transcription.rs  wizard.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/pages/: DashboardPage.tsx  HistoryPage.tsx  PermissionsPage.tsx  SettingsPage.tsx
ui/src/stores/: appStore.ts
