[package]
name = "transcribble"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
enigo = "0.2"
rdev = "0.5"
whisper-rs = "0.12"
libc = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# UX improvements
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
