[package]
name = "transcribble-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
transcribble-core = { path = "../transcribble-core" }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Input handling
enigo = "0.2"

# macOS event tap and permission checking
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = "0.3"

# Time
chrono = "0.4"

# Whisper model (for type reference in state)
whisper-rs = "0.12"

# Audio (for permission check)
cpal = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "transcribble-app"
path = "src/main.rs"
